3-tier-app-on-EKS/confugurations/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: workshop
spec:
  rules:
  - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 3000
